<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/top_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/greetingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/Hello_to_concat"/>

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="onSignOutButtonClick"
                android:text="@string/sign_out_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_row_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/top_buttons">

            <Button
                android:id="@+id/addTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add_task" />

            <Button
                android:id="@+id/allTasksButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/All_tasks" />

            <Button
                android:id="@+id/settingsPageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Settings"/>

            <Button
                android:id="@+id/locationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_location"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/chooseExistingTeamLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nav_bar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_existing_team"
        app:layout_constraintBottom_toTopOf="@+id/teamSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_bar" />

        <Spinner
            android:id="@+id/teamSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/mainRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chooseExistingTeamLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamSpinner" />



</androidx.constraintlayout.widget.ConstraintLayout>
